--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
